--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -7,6 +7,9 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <img src="assets/freedom.jpg" alt="Freedom">
+        <div class="freedom">
+      <p class="text">"The freedom of Mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</p>
+      <p class="human"><small>-Jean-Jacques Rousseau</small></p>
+    </div>
 </body>
 </html>
